v4.0.0:
  Users:
    - Relion 5.0.
    - Adapted to scipion-em-relion deprecation of relion3.
    - Add warning preventing to set the box size and the cropped box size to the same value as it may cause an
      internal error in relion (Thanks to DSheperd).
  Developers:
    - Fix inspect in buildbot: Tkagg not set in wizard module.
v3.4.0:
  Note: this was supposed to be 3.3.0, but was published as 3.4.0
  Users:
    - After having performed a refine or classification of particles, fields _rlnLogLikeliContribution,
      _rlnMaxValueProbDistribution and _rlnNrOfSignificantSamples are registered, so they can be plotted versus the
      no. particles using the data viewer and used as quality control metrics.
   - Add extra params to some more protocols apart from refine subtomograms.
   - Fix some initial MPI/Threads combinations (Thanks to Bram Koster).
   - Rename the protocols the same as in native Relion.
   - Enhancing the helps and use of RelionTomo4 (Thanks to J. L. Vilas).
   - Validation conditions have been release and checked (Thanks to J. L. Vilas).
  Developers:
    - Tests rewritten using the test dataset relion40_sta_tutorial_data, using the Test Centralization Layer (TCL), and
      decoupled in independent tests.
    - Remove BETA status
v3.2.2:
 Users:
  - Hotfix: the protocol visualization on the left panel was fixed.
  - Call the tlt file generation method considering the excluded views.
  - Fix the 3d classification Scipion Classes objects generation (previous bad particle assignment).
 Developers:
  - Fix: the coordinates generated in the convert input step of the prepare data protocol are now float instead of
    integer.
v3.2.1:
  - Installation requirements better managed.
  - Fix: Relion output now copies the acquisition.
  - Fix: The sampling rate displayed for the initial volume was incorrect.
  - Fix: FSC object stored unused data for the FSC viewer. That data was removed.
  - Tests updated.
v3.2.0: