@@ -26,20 +26,19 @@
 # **************************************************************************
 from enum import Enum
 from pwem.objects import VolumeMask, FSC
+from pyworkflow.object import String
 from pyworkflow.protocol import PointerParam, BooleanParam, FloatParam, GE, LE, IntParam, FileParam
-from pyworkflow.utils import makePath
+from pyworkflow.utils import makePath, Message
 from reliontomo import Plugin
 from reliontomo.constants import POST_PROCESS_MRC, POSTPROCESS_DIR, \
     POSTPROCESS_STAR_FSC_TABLE, \
-    POSTPROCESS_STAR_FSC_COLUMNS, FSC_REF_STAR
-from reliontomo.objects import RelionSetOfPseudoSubtomograms
-from reliontomo.protocols.protocol_base_relion import ProtRelionTomoBase, IS_RELION_50
+    POSTPROCESS_STAR_FSC_COLUMNS, FSC_REF_STAR, POSTPROCESS_STAR_FIELD
+from reliontomo.protocols.protocol_base_relion import ProtRelionTomoBase
 
 NO_MTF_FILE = 0
 
 
 class outputObjects(Enum):
-    relionParticles = RelionSetOfPseudoSubtomograms
     postProcessVolume = VolumeMask
     outputFSC = FSC
 
@@ -62,7 +61,8 @@ class ProtRelionPostProcess(ProtRelionTomoBase):
 
     # -------------------------- DEFINE param functions -----------------------
     def _defineParams(self, form):
-        super()._defineCommonInputParams(form)
+        # super()._defineCommonInputParams(form)
+        form.addSection(label=Message.LABEL_INPUT)
         form.addParam('inVolume', PointerParam,
                       pointerClass='Volume',
                       label='Volume to sharpen',
@@ -152,37 +152,26 @@ class ProtRelionPostProcess(ProtRelionTomoBase):
     # -------------------------- INSERT steps functions -----------------------
     def _insertAllSteps(self):
         makePath(self._getExtraPath(POSTPROCESS_DIR))
-        self._insertFunctionStep(self.convertInputStep)
         self._insertFunctionStep(self.relionPostProcessStep)
         self._insertFunctionStep(self.createOutputStep)
-
-    def convertInputStep(self):
-        if IS_RELION_50:
-            self.genInStarFile(are2dParticles=self.getInputParticles().are2dStacks())
 
     def relionPostProcessStep(self):
         Plugin.runRelionTomo(self, 'relion_postprocess', self.genPostProcessCmd())
 
     def createOutputStep(self):
-        inParticles = self.inReParticles
         inVolume = self.inVolume
-        pSubtomoSet = self.genRelionParticles()
-        pSubtomoSet.updateGenFiles(self._getExtraPath())
+        fn = self._getExtraPath(FSC_REF_STAR)
         postProccesMrc = self._genPostProcessOutputMrcFile(POST_PROCESS_MRC)
+        # Extend the sharpened volume with an attribute containing the postprocess.star file
+        setattr(postProccesMrc, POSTPROCESS_STAR_FIELD, String(fn))
 
         # Output FSC
-
-        fn = self._getExtraPath(FSC_REF_STAR)
         setOfFSC = self.genFSCs(fn, POSTPROCESS_STAR_FSC_TABLE,
                                 POSTPROCESS_STAR_FSC_COLUMNS)
 
         self._defineOutputs(**{outputObjects.postProcessVolume.name: postProccesMrc,
-                               outputObjects.relionParticles.name: pSubtomoSet,
                                outputObjects.outputFSC.name: setOfFSC})
-        self._defineSourceRelation(inParticles, postProccesMrc)
-        self._defineSourceRelation(inParticles, pSubtomoSet)
         self._defineSourceRelation(inVolume, postProccesMrc)
-        self._defineSourceRelation(inParticles, pSubtomoSet)
 
     # -------------------------- INFO functions -------------------------------
     def _validate(self):
@@ -193,7 +182,7 @@ class ProtRelionPostProcess(ProtRelionTomoBase):
 
     # --------------------------- UTILS functions -----------------------------
     def genPostProcessCmd(self):
-        calPixSize = self.calPixSize.get() if self.calPixSize.get() > 0 else self.getInputParticles().getSamplingRate()
+        calPixSize = self.calPixSize.get() if self.calPixSize.get() > 0 else self.inVolume.get().getSamplingRate()
         half1, half2 = self.inVolume.get().getHalfMaps().split(',')
         cmd = ''
         cmd += '--i %s ' % half1
